@@ -104,6 +104,13 @@ Changes from 4.1.x to 4.2.0
     argument is present and is non-zero or non-null, the time will be converted
     from UTC instead of from the local timezone.
 
+26. The FIELDWIDTHS parsing syntax has been enhanced to allow specifying
+    how many characters to skip before a field starts.
+
+27. An API input parser now has the ability to override the default field
+    parsing mechanism by specifying the locations of each field in the input
+    record.
+
 Changes from 4.1.3 to 4.1.4
 ---------------------------
 
