@@ -1,3 +1,9 @@
+2017-03-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* awkcard.in: Document FIELDWIDTHS enhancement to support an optional
+	field skip prefix.
+	* gawk.1: Ditto.
+
 2017-03-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Improve the discussion of quoting on
