@@ -1,5 +1,10 @@
 2017-03-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
+	* NEWS: Document new FIELDWIDTHS skip capability and API input parser
+	field parsing enhancement.
+
+2017-03-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
 	* gawkapi.h (awk_input_buf_t): Update get_record comment regarding the
 	new field_width argument.
 
